Fixed issue where workout was not showing correctly for workout in workout history (running, walk or weights). Added font end code to make the UI much cleaner for user when dealing with workouts. Added css to elements as well. Removed bootstrap inputs and readded material (indecisive)

--- a/client/src/components/WorkoutGird/assets/workoutGrid.css
+++ b/client/src/components/WorkoutGird/assets/workoutGrid.css
@@ -40,9 +40,33 @@
 }
 
 .workoutStats p {
+  font-size: 20px;
   color: #f9c000 !important;
   margin: 1%;
 }
+
+.workoutStats, .infoWorkoutDiv {
+  font-size: 20px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.editFormInputs {
+  gap: 5px;
+  display: flex;
+}
+
+.BtnDiv {
+  display: flex;
+  justify-content: space-around;
+  height: 40px;
+  display: flex;
+  gap: 10px; 
+  z-index: 1;
+}
+
+
+
 
 .workoutStats {
   border: 1px solid rgba(255, 255, 255, 0.482);
